2004-09-29  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs-cust.el:
	(custom-set-variables): set tramp-default-method-alist in a better way for ftp

2004-09-26  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/remember-config.el:
	removed useless dependency to planner-rss

	* perso/planner-config.el:
	removed useless dependency to diary, don't load bbdb or gnus until really needed

	* perso/mycompletion.el:
	removed useless dependency to template

	* perso/mycode.el:
	removed useless dependency to cc-cmds

	* perso/emacs-wiki-config.el:
	removed useless dependency to w3m

	* perso/visual.el:
	initial checkin

	* dotemacs.el:
	(muse-mode): autoload it
	(project): properly request it
	(visual): use it
	(time-stamp): make proper use of it
	(c-mode-common-hook): autoload doxymacs
	(autoload): more autoloads
	re-enabled html configuration
	reduced loading time from 8 to 2.5 seconds. YEAH !

	* dotemacs-cust.el:
	(custom-set-variables): reuse sections for ChangeLogs
	(custom-set-variables): use JavaDoc-style doxygen
	(custom-set-faces): change default mmm-submode background
	moved visual stuff to it's own package

2004-09-22  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	add code for showing mark position

	* dotemacs-cust.el:
	(custom-set-faces): differentiate string and doc

	* perso/planner-config.el:
	(planner-publishing-directory): don't trash my public_html

	* dotgnus.el:
	(gnus-add-configuration): info buffers

	* dotemacs.el:
	(set-scroll-margin): do not scroll in *Calendar*

	* dotemacs-cust.el:
	(custom-set-variables): do not hl-line in *Calendar*

2004-09-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/planner-config.el:
	new binding for editing the task description

	* dotemacs.el
	(color-eldoc): use it for better eldoc help

	* dotemacs-cust.el:
	(custom-set-variables): don't popup me

	* perso/color-eldoc.el:
	initial checkin

	* dotgnus.el:
	(bbdb/send-hook): use it

2004-09-19  Yann Hodique  <Yann.Hodique@lifl.fr>
